# codeflix-catalog-admin

./: .gitignore  .pre-commit-config.yaml  Makefile  manage.py  pyproject.toml
app/: category.py
src/core/category/application/: category_repository.py  create_category.py  delete_category.py  exceptions.py  get_category.py  list_category.py  update_category.py
src/core/category/infra/: in_memory_category_repository.py
src/core/category/tests/application/: test_create_category.py
src/core/category/tests/application/integration/: test_create_category.py  test_delete_category.py  test_get_category.py  test_list_category.py  test_update_category.py
src/core/category/tests/application/unit/: test_create_category.py  test_delete_category.py  test_get_category.py  test_list_category.py  test_update_category.py
src/core/category/tests/domain/: test_category.py
src/core/category/tests/infra/: test_in_memory_cateogory_repository.py
src/django_app/: settings.py  urls.py
src/django_app/category/: admin.py  apps.py  models.py  repository.py  tests.py  views.py
src/django_app/category/migrations/: 0001_initial.py
src/django_app/category/tests/: test_category_api.py  test_repository.py
tests/unitary/: test_category.py
